[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcodeCookies"
description = "Retrieve leetcode cookies from browser keychains"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
	{name = "Wang Kai", email = "kaiwkx@gmail.com"},
	{name = "Jon Boone", email = "ipmonger@delamancha.org"},
 	]
maintainers = [
	{name = "Jon Boone", email = "ipmonger@delamancha.org"},
]
keywords = [ "browser", "cookies", "leetcode" ]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
]
dependencies = [
	     "browser_cookies3",
]

dynamic = ["version"]

[project.scripts]
leetcodeCookies = "leetcodeCookies:main"

[tool.setuptools.dynamic]
version = {attr="leetcodeCookies.VERSION"}
